--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@angular/platform-browser": "~17.3.8",
     "@angular/platform-browser-dynamic": "~17.3.8",
     "@angular/router": "~17.3.8",
+    "@nx/plugin": "^20.3.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.14.0"
   },
