--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@angular/platform-browser": "~17.3.8",
     "@angular/platform-browser-dynamic": "~17.3.8",
     "@angular/router": "~17.3.8",
+    "@nx/devkit": "20.3.0",
     "@nx/plugin": "^20.3.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.14.0"
@@ -35,6 +36,7 @@
     "@nx/workspace": "20.3.0",
     "@schematics/angular": "~17.3.8",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
