--- a/apps/finance/expenses-registration-e2e/project.json
+++ b/apps/finance/expenses-registration-e2e/project.json
@@ -1,6 +1,6 @@
 {
   "name": "expenses-registration-e2e",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/finance/expenses-registration-e2e/src",
   "tags": [],
