--- a/libs/workspace-generators-plugin/project.json
+++ b/libs/workspace-generators-plugin/project.json
@@ -1,7 +1,7 @@
 {
   "name": "workspace-generators-plugin",
-  "$schema": "../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/src",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/workspace-generators-plugin/src",
   "projectType": "library",
   "tags": [],
   "targets": {
@@ -9,11 +9,11 @@
       "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/libs",
-        "main": "libs/src/index.ts",
-        "tsConfig": "libs/tsconfig.lib.json",
+        "outputPath": "dist/libs/workspace-generators-plugin",
+        "main": "libs/workspace-generators-plugin/src/index.ts",
+        "tsConfig": "libs/workspace-generators-plugin/tsconfig.lib.json",
         "assets": [
-          "libs/*.md",
+          "libs/workspace-generators-plugin/*.md",
           {
             "input": "./libs/src",
             "glob": "**/!(*.ts)",
@@ -41,7 +41,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/jest.config.ts"
+        "jestConfig": "libs/workspace-generators-plugin/jest.config.ts"
       }
     }
   }
