--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@angular-monorepo/workspace-generators-plugin": ["libs/src/index.ts"]
+      "@angular-monorepo/workspace-generators-plugin": ["libs/workspace-generators-plugin/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
