fix: update Angular component style configuration and adjust path formatting in tsconfig

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@angular-monorepo/workspace-generators-plugin": ["libs/workspace-generators-plugin/src/index.ts"]
+      "@angular-monorepo/workspace-generators-plugin": [
+        "libs/workspace-generators-plugin/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
